Adjusted css-file fixing todo-list issue with todo's not showing in column

--- a/public/style.css
+++ b/public/style.css
@@ -137,7 +137,7 @@ aside {
 }
 
 .activeTodoContainer {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: space-between;
   padding: 40px;
